# f

./: .dockerignore  .eslintignore  .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  PRIVACY.md  README.md  THREAT_MODEL.md  a.txt  analyze_git_status.py  coverage.xml  docker-compose.backend.yml  docker-compose.frontend.yml  docker-compose.yml  docker_compose_output.txt  f.txt  h.txt  nginx.conf  package-lock.json  prometheus.yml  pytest.ini  run_tests.py  temp_find_non_ascii.py  temp_import_test.py  test.db  test_models.db  test_warnings.txt
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  __init__.py  alembic.ini  deps.py  encrypted_test_file.enc  encryption_service.py  initial_setup.py  main.py  pyproject.toml  requirements.txt  test.db  test_models.db  test_reports.db  worker.py
backend/alembic/: alembic.ini  env.py
backend/api/: auth.py  deps.py  fl.py  medical_cases.py  mfa.py  mlflow.py  model_versions.py  reports.py
backend/core/: config.py  exceptions.py  hashing.py  security.py
backend/crud/: __init__.py  fl_metric.py  medical_case.py  medical_image.py  model_version.py  report.py  user.py
backend/db/: base.py  base_class.py  session.py  types.py
backend/fl_server/: Dockerfile  requirements.txt  secure_aggregator.py  server.py
backend/models/: __init__.py  fl_metrics.py  medical_case.py  medical_image.py  model_version.py  report.py  user.py
backend/schemas/: __init__.py  dashboard.py  encryption_context.py  fl_metric.py  image_metadata.py  medical_case.py  medical_image.py  mfa.py  mlflow.py  model_version.py  report.py  token.py  user.py
backend/services/: dashboard_service.py  mfa_service.py  xai_service.py
backend/tests/: conftest.py  locustfile.py  seed_test_db.py  test_auth.py  (+8 more)
(+446 files in other folders)
